--- a/cpp_vs2013.html
+++ b/cpp_vs2013.html
@@ -117,6 +117,60 @@
 
 <!-- next slide -->
 <section class="slide">
+	<h2>Uniform initialization 1/2</h2>
+    <h5>The C++11 solution is to allow {}-initializer lists for <em>all</em> initialization</h5>
+	<pre class="brush: c++">
+    	X x1 = X{1,2}; 
+        X x2 = {1,2}; 	// the = is optional
+        X x3{1,2}; 
+        X* p = new X{1,2}; 
+
+        struct D : X {
+            D(int x, int y) :X{x,y} { /* ... */ };
+        };
+
+        struct S {
+            int a[3];
+            S(int x, int y, int z) :a{x,y,z} { /* ... */ }; // solution to old problem
+        };
+	</pre>
+    <h6>Copy-construction</h6>
+	<pre class="brush: c++">
+    	X x{a}; 
+        X* p = new X{a};
+        z = X{a};         // use as cast
+        f({a});           // function argument (of type X)
+        return {a};       // function return value (function returning X)
+	</pre>
+    <a href="http://www.stroustrup.com/C++11FAQ.html#uniform-init">Source</a>
+</section>
+<section class="slide">
+	<h2>Uniform initialization 2/2</h2>
+    <h5>Return values</h5>
+	<pre class="brush: c++">
+        virtual std::array&lt;double, 6> GetOffsets() const
+        {
+            return{ m_Struct.OffsetXMin, m_Struct.OffsetXMax, m_Struct.OffsetYMin,
+                    m_Struct.OffsetYMax, m_Struct.OffsetZMin, m_Struct.OffsetZMax };
+        }
+        virtual Vector_c GetReferenceSize() const
+        {
+            return{ m_Struct.ReferenceSizeX, m_Struct.ReferenceSizeY, m_Struct.ReferenceSizeZ };
+        }
+	</pre>
+    <h5>Function parameters</h5>
+	<pre class="brush: c++">
+    geometry::IndirectPolygon_t CreateIndirectPolygon(const std::array&lt;int, 4> &aIndices)
+    {
+        return{ aIndices.begin(), aIndices.end() };
+    }
+    
+    const auto IndirectPolygon = CreateIndirectPolygon({ { 0, 1, 2, 3 } });
+	</pre>
+    <a href="http://www.stroustrup.com/C++11FAQ.html#uniform-init">Source</a>
+</section>
+<!-- next slide -->
+<section class="slide">
 	<h2>Range-based for loop</h2>
 	<h5>C++98</h5>
 	<pre class="brush: c++">
